# ChangeLog for x11-base/xorg-x11
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-x11/ChangeLog,v 1.93 2004/08/21 10:23:25 seemant Exp $

  21 Aug 2004; Seemant Kulleen <seemant@gentoo.org>
  xorg-x11-6.7.99.902.ebuild:
  OK, this is the real ebuild. I'm calling this the
  Latexer-isnt-made-from-rubber release. Test away, and look for xcompmgr in
  x11-misc

*xorg-x11-6.7.99.902 (21 Aug 2004)

  21 Aug 2004; Seemant Kulleen <seemant@gentoo.org>
  +xorg-x11-6.7.99.902.ebuild:
  Version bump to rc2, but this is an identical ebuild to 99.2 just so we can
  easily make diffs of the changes. Real ebuild to follow momentarily

  20 Aug 2004; Seemant Kulleen <seemant@gentoo.org> xorg-x11-6.7.99.2.ebuild:
  fix sed properly, thanks to ciaranm and swegener

  14 Aug 2004; Seemant Kulleen <seemant@gentoo.org> xorg-x11-6.7.99.2.ebuild:
  nothing separate to unpack for USE=doc, since we're using one tarball

  13 Aug 2004; Brandon Hale <tseng@gentoo.org> xorg-x11-6.7.99.2.ebuild:
  Minor adjustment to einfo for USE=dlloader, rework sed to replace keyboard
  with kbd driver, move that bit into setup_config_files and clean up that
  function a bit.

*xorg-x11-6.7.99.2 (13 Aug 2004)

  13 Aug 2004; Seemant Kulleen <seemant@gentoo.org> +xorg-x11-6.7.99.2.ebuild:
  New snapshot: FOR TESTING ONLY.  I'm calling this the "Use Ajax for
  everything" release in portage.

  02 Aug 2004; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.7.0-r1.ebuild, xorg-x11-6.7.0-r2.ebuild:
  fc-cache -f breaks the font eclass, according to foser.

  02 Aug 2004; Donnie Berkholz <spyderous@gentoo.org>; :
  Note that the last commit was FILES_VER 0.3.

  02 Aug 2004; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.7.0-r1.ebuild, xorg-x11-6.7.0-r2.ebuild:
  Fix font setup (#53753). Previously we trashed fonts.scale for all scalable
  fonts, even though we only regenerated it for TrueType fonts. ttmkfdir can't