@@ -1,6 +1,12 @@
 # ChangeLog for x11-base/xorg-x11
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-x11/ChangeLog,v 1.93 2004/08/21 10:23:25 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-x11/ChangeLog,v 1.94 2004/08/23 03:46:33 spyderous Exp $
+
+  22 Aug 2004; Donnie Berkholz <spyderous@gentoo.org>;
+  xorg-x11-6.7.0-r1.ebuild, xorg-x11-6.7.0-r2.ebuild,
+  xorg-x11-6.7.99.2.ebuild, xorg-x11-6.7.99.902.ebuild:
+  replace-cpu-flags had args in the wrong order, resulting in p3's being
+  compiled with p4 badness (#60597).
 
   21 Aug 2004; Seemant Kulleen <seemant@gentoo.org>
   xorg-x11-6.7.99.902.ebuild:
